<resources>
    <string name="app_name">Track Your Way</string>
    <string name="title">Track Your Way</string>
    <string name="userBtn">Runner</string>
    <string name="viewerBtn">Viewer</string>
    <string name="titleRunner">Welcome Runner</string>
    <string name="startBtn">Start Running</string>
    <string name="runTitle">The race is underway...</string>
    <string name="stopBtn">Stop Running</string>
    <string name="alertBtn">Alert Problem</string>
    <string name="title_activity_viewer">Map</string>
    <string name="filterBy">Filtering by :</string>
    <string name="spinnerFilter">Filter</string>
    <string name="alertBtnTxt">Send Alert</string>
    <string-array name="filterStringArray">
        <item></item>
        <item>bib</item>
        <item>team</item>
    </string-array>
    <string name="resetButton">Reset</string>
    <string name="bibFilter">Filtering by bib</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="teamSelect">Select a team</string>
    <string name="team">Team</string>
    <string name="id">Bib</string>
    <string name="TakepicBtn">Take a picture</string>
    <string name="titleAlert">Click on the button if you have an alert</string>
    <string name="alertTitle">Sending the alert message</string>
    <string name="countdown">seconds before sending the message to the Admin</string>


</resources>
