<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3c3229"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.trackyourway.MainActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/runner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="122dp"
        android:text="@string/userBtn" />

    <Button
        android:id="@+id/viewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/runner"
        android:text="@string/viewerBtn" />


</RelativeLayout>
